objects/Contract_Renewal__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>IMX_Contract__c</referenceTo>
        <relationshipName>Contract_Rewewals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Contract_End_Date__c</fullName>
        <label>New Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extension</fullName>
                    <default>true</default>
                    <label>Extension</label>
                </value>
                <value>
                    <fullName>Adjusted End Date</fullName>
                </value>
                <value>
                    <fullName>Termination Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Amendment</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Contract Amendment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>